--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@types/node": "^18.16.8",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/tsconfig": "^0.4.0",
+    "node-sass": "^9.0.0",
     "npm-run-all": "^4.1.5",
+    "sass": "^1.63.4",
+    "sass-loader": "^13.3.2",
     "typescript": "~5.0.4",
     "vite": "^4.3.5",
     "vue-tsc": "^1.6.4"
