--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^18.16.8",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/tsconfig": "^0.4.0",
+    "bcrypt": "^5.1.0",
     "node-sass": "^9.0.0",
     "npm-run-all": "^4.1.5",
     "sass": "^1.63.4",
