--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "idb-keyval": "^6.2.1",
+    "pinia": "^2.1.7",
     "vue": "^3.3.2",
     "vue-router": "^4.2.0"
   },
@@ -31,7 +32,6 @@
     "typescript": "~5.0.4",
     "typesync": "^0.11.1",
     "vite": "^4.3.5",
-    "vue-tsc": "^1.6.4",
-    "vuex": "^4.1.0"
+    "vue-tsc": "^1.6.4"
   }
 }
