--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,14 @@
 {
   "files": [],
+  "compilerOptions": {
+    "strict": true,
+    "isolatedModules": true,
+    "paths": {
+      "@": [
+        "./src"
+      ]
+    }
+  },
   "references": [
     {
       "path": "./tsconfig.node.json"
