--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preinstall": "typesync || :"
   },
   "dependencies": {
+    "click-outside-vue3": "^4.0.1",
     "idb-keyval": "^6.2.1",
     "pinia": "^2.1.7",
     "vue": "^3.3.2",
@@ -24,6 +25,7 @@
     "@types/sass-loader": "^8.0.8",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/tsconfig": "^0.4.0",
+    "@vueuse/core": "^10.7.2",
     "bcrypt": "^5.1.0",
     "node-sass": "^9.0.0",
     "npm-run-all": "^4.1.5",
