add serif and sanserif font (#108)

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preinstall": "typesync || :"
   },
   "dependencies": {
+    "@unhead/vue": "^1.9.14",
     "click-outside-vue3": "^4.0.1",
     "pinia": "^2.1.7",
     "vue": "^3.3.2",
