--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@formkit/tempo": "^0.1.2",
     "@unhead/vue": "^1.9.14",
     "click-outside-vue3": "^4.0.1",
+    "node": "^22.6.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.2",
     "vue-router": "^4.4.3"
@@ -28,9 +29,8 @@
     "@vue/tsconfig": "^0.4.0",
     "@vueuse/core": "^10.7.2",
     "bcrypt": "^5.1.0",
-    "node-sass": "^9.0.0",
     "npm-run-all": "^4.1.5",
-    "sass": "^1.63.4",
+    "sass": "^1.77.8",
     "sass-loader": "^13.3.2",
     "typescript": "~5.0.4",
     "typesync": "^0.11.1",
